Sonarqube/psql-sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql
  namespace: sonarqube
spec:
  serviceName: "sonar-psql"
  selector:
    matchLabels:
      run: sonar-psql
  template:
    metadata:
      labels:
        run: sonar-psql
    spec:
      containers:
      - name: postgresql
        image: postgres:13.1
        volumeMounts:
          - name: snr-psql-data
            mountPath: /var/lib/postgresql/data
        ports:
        - containerPort: 5432
          name: psql
      volumes:
      - name: snr-psql-data
        persistentVolumeClaim:
          claimName: snr-psql-data-postgresql-0
  volumeClaimTemplates:
  - metadata:
      name: snr-psql-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: longhorn-xfs
      resources:
        requests:
          storage: 5Gi
