Sonarqube/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  labels:
    run: sonarqube
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 9000
    protocol: TCP
  selector:
    run: sonarqube
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarqube
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarqube.danmanners.io`)
      kind: Rule
      services:
        - name: sonarqube
          port: 9000
  tls:
    secretName: sonarqube-cert
